# RCC

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Cockpit/: CMakeLists.txt  cockpit.cpp  dashboard.cpp  dashboard.h
Cockpit/Controls/: input.cpp  input.h
Cockpit/Modules/: camera.cpp  camera.h  module.h  ping.cpp  ping.h  rc.cpp  rc.h  rc_default_controls.cpp
Vehicle/: CMakeLists.txt  vehicle.c  vehicle.cpp  vehicle.h
Vehicle/Drivers/: interface.h
Vehicle/Drivers/Debug/: CMakeLists.txt  debug.cpp  debug.h
Vehicle/Modules/: camera.cpp  camera.h  modules.h  ping.c  ping.cpp  ping.h  rc.cpp  rc.h
Vehicle/Util/: config.c  config.cpp  config.h  logging.c  logging.cpp  logging.h
dependencies/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
libRC/: CMakeLists.txt  OpCodes.md  interface.h  messages.h
libRC/Peripherals/: camera.cpp  camera.h
libRC/Stream/: buffer.cpp  buffer.h  camdata.cpp  camdata.h  netstream.c  netstream.cpp  netstream.h  rc.cpp  rc.h
